<resources>
    <string name="app_name">MotherChild_DigitalHealth_Book</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_your_email_address">Enter Your Email Address</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="emergency_contact_please_provide_two"><b>Emergency Contact</b> <small>(Please provide two)</small></string>


    <string-array name="month">
        <item>Select Month</item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>

    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="mother_s_health_information">MOTHER\'S HEALTH INFORMATION</string>
    <string name="initial_general_examination">Initial General Examination:</string>
    <string name="bp">BP:</string>
    <string name="whats_your_bp">whats your bp</string>
    <string name="height">Height:</string>
    <string name="pre_pregnancy_wt">Pre-pregnancy Wt:</string>
    <string name="bmi">BMI:</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="nl">Nl</string>
    <string name="abl">Abl</string>
    <string name="edema">Edema</string>
    <string name="jaundice">Jaundice</string>
    <string name="pallor">Pallor</string>
    <string name="teeth_gums">Teeth/Gums</string>
    <string name="heart">Heart</string>
    <string name="liver">Liver</string>
    <string name="lungs">Lungs</string>
    <string name="breast">Breast</string>
    <string name="spleen">Spleen</string>
    <string name="no1">No</string>
    <string name="yes1">Yes</string>
    <string name="cardiac_disease">Cardiac Disease</string>
    <string name="diabetes">Diabetes</string>
    <string name="no2">No</string>
    <string name="yes2">Yes</string>
    <string name="hypertension">Hypertension</string>
    <string name="hepatitis">Hepatitis</string>
    <string name="thyroid_disease">Thyroid Disease</string>
    <string name="tuberculosis">Tuberculosis</string>
    <string name="tuberculosis1">Tuberculosis</string>
    <string name="family_history_of_twins">Family history of twins</string>
    <string name="family_history_of_congenital_defects_requires_usg_scan_btw_20_22wks">Family History of congenital defects(requires USG scan btw 20-22wks)</string>
    <string name="known_substance_use_including_alcohol_doma_smoking">known substance use(including alcohol,doma,smoking)</string>
    <string name="infertility_treatment_specify">Infertility treatment(specify):</string>
    <string name="other_severe_medical_disease_list">Other severe medical disease(list):</string>
    <string name="no3">No</string>
    <string name="yes3">Yes</string>
    <string name="diastolic_bp_over_90">Diastolic BP over 90</string>
    <string name="_18_or_40_years_old"><![CDATA[<18 or > 40 years old]]></string>
    <string name="pelvic_mass">Pelvic mass</string>
    <string name="suspected_twins">Suspected twins</string>
    <string name="suspected_sti_rti">Suspected STI/RTI</string>
    <string name="vaginal_bleeding">Vaginal Bleeding</string>
    <string name="no4">No</string>
    <string name="yes4">Yes</string>
    <string name="blood_transfusion">Blood Transfusion</string>
    <string name="medical_history">Medical History:</string>
    <string name="transfusion_reaction">Transfusion reaction</string>
    <string name="no7" />
    <string name="yes7" />
    <string name="no8">No</string>
    <string name="yes8">Yes</string>
    <string name="past_obstetric_history">Past Obstetric History</string>
    <string name="renal_disease">Renal Disease</string>
    <string name="mother_is_rh_negative_and_father_is_rh_positive">Mother is RH negative and father is Rh positive</string>
    <string name="previous_still_birth_neonatal_loss_or_congenital_defect_circle">Previous still birth, neonatal loss, or congenital defect (circle)</string>
    <string name="history_of_3_or_more_consecutive_spontaneous_abortions">History of 3 or more consecutive spontaneous abortions</string>
    <string name="birth_weight_of_last_baby_less_than_2500_grams">Birth weight of last baby less than 2500 grams</string>
    <string name="birth_weight_of_last_baby_more_than_4500_grams">Birth weight of last baby more than 4500 grams</string>
    <string name="last_pregnancy_childbirth_circle_from_list_below_chronic_hypertension_pre_eclampsia_or_eclampsia_pph_retained_placenta">Last pregnancy/childbirth:(circle from list below) (chronic hypertension, pre-eclampsia, or eclampsia, PPH, retained placenta)</string>
    <string name="previous_surgery_on_reproductive_tract_circle_from_list_below_caesarean_section_servical_cerclage_leep_myomectomy_ectopic_other">Previous surgery on reproductive tract: (circle from list below) (caesarean section, servical cerclage, LEEP, myomectomy, ectopic, other)</string>
    <string name="if_any_of_the_highlighted_questions_are_yes_provide_closer_follow_up_or_refer_as_indicated">If any of the highlighted questions are YES, provide closer follow up or refer as indicated</string>
    <string name="list_allergies">List Allergies:</string>
    <string name="list_medicines">List medicines:</string>

    <string name="not_moving_equally">Not moving equally</string>
    <string name="extra_digits_specify">Extra digits(specify)</string>
    <string name="color">Color</string>
    <string name="central_cyanosis">Central cyanosis</string>
    <string name="jaundiceS">Jaundice</string>
    <string name="Pallor">pp</string>
    <string name="pallorrr">Pallor</string>
    <string name="Head" />
    <string name="head">Head</string>
    <string name="caput">Caput</string>
    <string name="caphalohematoma">Caphalohematoma</string>
    <string name="microcephaly">Microcephaly</string>
    <string name="fontanelle">Fontanelle</string>
    <string name="bulging">Bulging</string>
    <string name="sunken">Sunken</string>
    <string name="cleft_lip_palate">Cleft lip/ palate</string>
    <string name="tachypnea_over60">Tachypnea(over60)</string>
    <string name="retractions">Retractions</string>
    <string name="murmur">Murmur</string>
    <string name="heartss">Heart</string>
    <string name="erythema_discharge">Erythema/Discharge</string>
    <string name="less_than_3_weeks">Less than 3 weeks</string>
    <string name="distended">Distended</string>
    <string name="genetalia">Genetalia</string>
    <string name="ambiguous">Ambiguous</string>
    <string name="hypospadius">Hypospadius</string>
    <string name="undescened_testes">Undescened testes</string>
    <string name="undescended_testes">Undescended testes</string>
    <string name="baby_s_first_physical_exam">BABY\'S FIRST PHYSICAL EXAM:</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="wt">Wt:</string>
    <string name="length">Length:</string>
    <string name="hc">HC:</string>
    <string name="sex">Sex:</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="exam">Exam</string>
    <string name="nl1">Nl</string>
    <string name="abnormal_findings">Abnormal Findings</string>
    <string name="tone_cry">Tone/cry</string>
    <string name="floppy_weak">Floppy/Weak</string>
    <string name="extremities">Extremities</string>
    <string name="abdomen">Abdomen</string>
    <string name="umbilicus">Umbilicus</string>
    <string name="grunting">Grunting</string>
    <string name="chest">Chest</string>
    <string name="mouth">Mouth</string>


    <string name="general_advice_for_mothers">General Advice For Mothers</string>
    <string name="birth_preparation_plan">Birth Preparation Plan</string>
    <string name="keyinformation">Key Information For infant and Child\'s Safety</string>
    <string name="dental">Dental Care For Children</string>
    <string name="breastfeeding">Breastfeeding Tips</string>
    <string name="caringnb">Caring For Newborn Child</string>
    <string name="todo">TODO</string>
    <string name="name_of_health_center">Name of Health Center:</string>
    <string name="home_health_center_contact_no">Home Health Center Contact No:</string>
    <string name="mobile_no_optional">Mobile No (Optional):</string>
    <string name="date_issued">Date issued:</string>
    <string name="place_issued">Place issued:</string>
    <string name="hospital_location">Hospital location</string>

</resources>
