<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:background="#EAEDF0">

    <androidx.cardview.widget.CardView
        android:id="@+id/login_view"
        android:layout_width="360dp"
        android:layout_height="500dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="15dp"
        android:elevation="100dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:src="@drawable/logo" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:theme="@style/TextInputLayoutStyle"
                app:boxStrokeColor="#1877F2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_email"
                    android:layout_width="350dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/enter_your_email_address"
                    android:drawablePadding="10dp"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:textColorHint="#fff"
                    android:drawableStart="@drawable/user_icon"
                    android:inputType="textEmailAddress"/>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:theme="@style/TextInputLayoutStyle"
                app:boxStrokeColor="#1877F2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:passwordToggleEnabled="true"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_pw"
                    android:layout_width="350dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/enter_your_password"
                    android:drawablePadding="10dp"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:textColorHint="#000"
                    android:drawableStart="@drawable/password_icon"
                    android:inputType="textPassword"/>


            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_btn"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:background="@drawable/button_style"
                android:layout_marginTop="25dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/login"
                android:onClick="login"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:ignore="UsingOnClickInXml" />



            <TextView
                android:id="@+id/forgotPw_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="@color/black"
                android:layout_marginTop="15dp"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/sign_up_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Don't have an account?"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:textSize="15sp"
                tools:ignore="HardcodedText" />
            <TextView
                android:id="@+id/sign_up_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="#1877F2"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:textSize="15sp"
                android:linksClickable="true" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
