<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".EducationalInfo_Homepage">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:columnCount="3">

            <androidx.cardview.widget.CardView
                android:id="@+id/mother_info"
                android:layout_width="140dp"
                android:layout_height="170dp"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="10dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="10dp"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:background="#1877F2"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="65dp"
                        android:layout_height="65dp"

                        android:background="@drawable/child_safety"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="133dp"
                        android:layout_height="59dp"
                        android:layout_marginTop="25dp"
                        android:text="@string/keyinformation"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        tools:ignore="HardcodedText" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/motherHealth_info"
                android:layout_width="140dp"
                android:layout_height="130dp"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="10dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="10dp"
                android:focusable="true"
                tools:ignore="UsingOnClickInXml">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:background="#1877F2"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/dental"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="130dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="25dp"
                        android:text="@string/dental"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        tools:ignore="HardcodedText" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/child_info"
                android:layout_width="150dp"
                android:layout_height="170dp"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="10dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="10dp"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:background="#1877F2"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:background="@drawable/breastfeeding"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="130dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="25dp"
                        android:text="@string/breastfeeding"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        tools:ignore="HardcodedText" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/Educational_info"
                android:layout_width="150dp"
                android:layout_height="170dp"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="10dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="10dp"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:background="#1877F2"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:background="@drawable/caringnewborn"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="130dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="25dp"
                        android:text="@string/caringnb"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        tools:ignore="HardcodedText" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/healthWorker_info"
                android:layout_width="150dp"
                android:layout_height="170dp"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="10dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="10dp"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:background="#1877F2"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:background="@drawable/advice"
                        android:contentDescription="@string/todo" />

                    <TextView
                        android:layout_width="130dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="25dp"
                        android:text="@string/general_advice_for_mothers"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="170dp"
                android:layout_margin="10dp"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="10dp"
                android:id="@+id/about_us"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#1877F2"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical|center_horizontal">

                    <ImageView
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:background="@drawable/plan"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="130dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="25dp"
                        android:text="@string/birth_preparation_plan"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </GridLayout>
    </ScrollView>
</LinearLayout>